# pyhcrypt

./: .gitignore  README.md  setup.cfg
pyhcrypt/: __init__.py  __main__.py  crypt.py
