[metadata]
name = pyhcrypt
version = attr: pyhcrypt.__version__
description = A simple and secure password-based encryption & decryption algorithm based on hash functions, implemented solely based on python.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/hfxunlp/pyhcrypt
author = Hongfei Xu
author_email = hfxunlp@foxmail.com
license = GNU General Public License v3 (GPLv3)
classifiers =
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Security :: Cryptography
	Topic :: Utilities

[options]
packages = pyhcrypt

[options.entry_points]
console_scripts =
	pyhcrypt = pyhcrypt.__main__:cli
