[metadata]
name = pyhcrypt
version = attr: pyhcrypt.__version__
description = A simple and secure password-based encryption & decryption algorithm based on hash functions, implemented solely based on python.
keywords = encryption, decryption, hash
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/hfxunlp/pyhcrypt
author = Hongfei Xu
author_email = hfxunlp@foxmail.com
maintainer = Hongfei Xu
maintainer_email = hfxunlp@foxmail.com
license = GNU General Public License v3 (GPLv3)
license_files = LICENSE
classifiers =
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Security :: Cryptography
	Topic :: Utilities

[options]
packages = pyhcrypt
zip_safe = True
python_requires = >=3.6

[options.entry_points]
console_scripts =
	pyhcrypt = pyhcrypt.__main__:cli
